# Bitcoin-bank

./: .gitignore  README.md  btc.conf.example
backend/: Cargo.toml  btc_conf.toml  deny.toml
backend/assets/: bitcoinbank.db  database.sql
backend/bitcoin-bank-conf/: btc_cold.conf  btc_hot.conf
backend/bitcoin-bank-conf/cold-wallet/: bitcoin.conf
backend/bitcoin-bank-conf/hot-wallet/: bitcoin.conf
backend/cold-wallet/: Cargo.toml
backend/cold-wallet/src/: main.rs
backend/common-operations/: Cargo.toml
backend/common-operations/src/: lib.rs  main.rs  scripts.rs  wallet.rs
backend/hot-wallet/: Cargo.toml  config.toml
backend/hot-wallet/assets/: bitcoinbank-old.db  bitcoinbank.db  database.sql
backend/hot-wallet/src/: database.rs  endpoints.rs  main.rs  schema.rs
backend/src/: btc_cli.rs  conf.rs  data_dirs.rs  database.rs  endpoints.rs  main.rs  wallet.rs
client/: package-lock.json  package.json
client/.next/: trace
client/.next/cache/webpack/client-development/: index.pack.gz.old
client/.next/server/: app-paths-manifest.json  next-font-manifest.js  next-font-manifest.json  server-reference-manifest.js  server-reference-manifest.json  webpack-runtime.js
client/.next/server/app/: page.js  page_client-reference-manifest.js
client/.next/server/vendor-chunks/: @swc.js  next.js
client/.next/static/chunks/: app-pages-internals.js  webpack.js
client/.next/static/webpack/: c27e7c6005098721.webpack.hot-update.json  webpack.591fdcad3f59f7af.hot-update.js  webpack.6fc24af4b83446a7.hot-update.js  webpack.c27e7c6005098721.hot-update.js  webpack.c5c9c60ffec41a27.hot-update.js
client/.next/types/app/: layout.ts  page.ts
client/src/app/account/: page.tsx
client/src/app/admin/: page.tsx
client/src/components/: Balance.jsx  Balance.tsx  LoginForm.tsx  TransferButton.tsx  TransferForm.tsx
client/src/utils/: index.ts
docs/: Bitcoin-bank_Design_Document.md
front-end/: package-lock.json  package.json
front-end/public/: index.html
front-end/src/: App.vue
front-end/src/components/: GetBalance.vue  HelloWorld.vue  LoginForm.vue  TransactionHistory.vue  aFooter.vue  modalPop.vue  userBalance.vue
front-end/src/data/: users.js
front-end/src/router/: index.js
(+12 files in other folders)
