[package]
name = "backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
once_cell = "1.19.0"
bitcoincore-rpc = "*"
serde = { version = "1.0.197", features = ["derive"] }
thiserror = "1.0.58"
toml = "0.8.12"
serde_json = "1.0.88"
rusqlite = { version = "0.28.0", features = ["bundled"] }
uuid = { version = "1.2.2", features = ["v4"] }
config = "0.13.3"
actix = "0.13.0"
actix-web = { version = "4.3.0" }
actix-cors = "0.6.4"
env_logger = "0.10.0"
tokio = "1.36.0"
lazy_static = "1.4.0"
directories = "5.0.1"
