[package]
name = "hot-wallet"
version = "0.1.0"
edition = "2021"
license = "CC0-1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = { version = "0.5.0", features = ["json", "serde_json"] }
common = { package = "common-operations", path = "../common-operations" }
serde = { version = "1.0.147", features = ["derive"]}
serde_json = "1.0.88"