[package]
name = "hot-wallet"
version = "0.1.0"
edition = "2021"
license = "CC0-1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = { version = "0.5.0", features = ["json", "serde_json"] }
common = { package = "common-operations", path = "../common-operations" }
serde = { version = "1.0.147", features = ["derive"]}
serde_json = "1.0.88"
rusqlite = { version = "0.28.0", features = ["bundled"]}
uuid = {version = "1.2.2", features = ["v4"]}
config = "0.13.3"
actix = "0.13.0"
#actix-web = {version = "4.3.0", features= ["openssl"] }
actix-web = {version = "4.3.0" }
env_logger = "0.10.0"